{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 316,
  "lineage": "8f65ce93-397f-c573-9d5f-db6219ca6960",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "cassandra_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.10",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-01-31T06:57:37.605-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/mybigdataproject-485818/regions/europe-north1/addresses/cassandra-internal-1",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "cassandra-internal-1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mybigdataproject-485818",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/addresses/cassandra-internal-1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/subnetworks/cassandra-subnetwork",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/zones/europe-north1-a/instances/cassandra-node-1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.11",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-01-31T06:57:37.581-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/mybigdataproject-485818/regions/europe-north1/addresses/cassandra-internal-2",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "cassandra-internal-2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mybigdataproject-485818",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/addresses/cassandra-internal-2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/subnetworks/cassandra-subnetwork",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/zones/europe-north1-b/instances/cassandra-node-2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.12",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-01-31T06:57:37.517-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/mybigdataproject-485818/regions/europe-north1/addresses/cassandra-internal-3",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "cassandra-internal-3",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mybigdataproject-485818",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/addresses/cassandra-internal-3",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/subnetworks/cassandra-subnetwork",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/zones/europe-north1-c/instances/cassandra-node-3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nifi_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.50",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-01-31T06:57:37.615-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/mybigdataproject-485818/regions/europe-north1/addresses/nifi-internal",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "nifi-internal",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mybigdataproject-485818",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/addresses/nifi-internal",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/subnetworks/cassandra-subnetwork",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/zones/europe-north1-a/instances/nifi-node"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nifi_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.88.120.214",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-30T09:19:50.043-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/mybigdataproject-485818/regions/europe-north1/addresses/nifi-public",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "nifi-public",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mybigdataproject-485818",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/addresses/nifi-public",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/zones/europe-north1-a/instances/nifi-node"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_cassandra_internode",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "7000",
                  "7001",
                  "7199",
                  "9160"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-31T06:57:16.822-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mybigdataproject-485818/global/firewalls/allow-cassandra-internode",
            "log_config": [],
            "name": "allow-cassandra-internode",
            "network": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/networks/cassandra-network",
            "params": [],
            "priority": 1000,
            "project": "mybigdataproject-485818",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/firewalls/allow-cassandra-internode",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cassandra-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_cql_from_nifi",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9042"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-31T06:57:15.994-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mybigdataproject-485818/global/firewalls/allow-cql-from-nifi",
            "log_config": [],
            "name": "allow-cql-from-nifi",
            "network": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/networks/cassandra-network",
            "params": [],
            "priority": 1000,
            "project": "mybigdataproject-485818",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/firewalls/allow-cql-from-nifi",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "nifi-node"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "cassandra-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_nifi_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080",
                  "8443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-31T06:57:16.886-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mybigdataproject-485818/global/firewalls/allow-nifi-web",
            "log_config": [],
            "name": "allow-nifi-web",
            "network": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/networks/cassandra-network",
            "params": [],
            "priority": 1000,
            "project": "mybigdataproject-485818",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/firewalls/allow-nifi-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nifi-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_cassandra",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-31T06:57:16.627-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mybigdataproject-485818/global/firewalls/allow-ssh-cassandra",
            "log_config": [],
            "name": "allow-ssh-cassandra",
            "network": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/networks/cassandra-network",
            "params": [],
            "priority": 1000,
            "project": "mybigdataproject-485818",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/firewalls/allow-ssh-cassandra",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cassandra-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_nifi",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-31T06:57:16.661-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mybigdataproject-485818/global/firewalls/allow-ssh-nifi",
            "log_config": [],
            "name": "allow-ssh-nifi",
            "network": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/networks/cassandra-network",
            "params": [],
            "priority": 1000,
            "project": "mybigdataproject-485818",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/firewalls/allow-ssh-nifi",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nifi-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "cassandra",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/zones/europe-north1-a/disks/cassandra-node-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-02-04T11:02:55.429-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/mybigdataproject-485818/zones/europe-north1-a/instances/cassandra-node-1",
            "instance_id": "7350578402642766129",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "_vKjmVwKTLo=",
            "metadata_startup_script": "#!/bin/bash\nset -euxo pipefail\n\n# Update system and install dependencies\napt-get update\napt-get install -y docker.io curl\nsystemctl enable docker\nsystemctl start docker\n\n# Increase the vm.max_map_count and RLIMIT_MEMLOCK\necho \"vm.max_map_count=1048575\" | sudo tee -a /etc/sysctl.conf\nsudo sysctl -p\n\n# Set RLIMIT_MEMLOCK to unlimited\necho \"* soft memlock unlimited\" | sudo tee -a /etc/security/limits.conf\necho \"* hard memlock unlimited\" | [...]
            "name": "cassandra-node-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.88.149.182",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/networks/cassandra-network",
                "network_ip": "10.0.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/subnetworks/cassandra-subnetwork",
                "subnetwork_project": "mybigdataproject-485818"
              }
            ],
            "project": "mybigdataproject-485818",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/zones/europe-north1-a/instances/cassandra-node-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cassandra-node"
            ],
            "tags_fingerprint": "jxI-TrHgZeI=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-north1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.cassandra_internal",
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/zones/europe-north1-b/disks/cassandra-node-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2026-02-04T11:03:07.147-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/mybigdataproject-485818/zones/europe-north1-b/instances/cassandra-node-2",
            "instance_id": "7478544539455465735",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "YumeLbjUcEo=",
            "metadata_startup_script": "#!/bin/bash\nset -euxo pipefail\n\n# Update system and install dependencies\napt-get update\napt-get install -y docker.io curl\nsystemctl enable docker\nsystemctl start docker\n\n# Increase the vm.max_map_count and RLIMIT_MEMLOCK\necho \"vm.max_map_count=1048575\" | sudo tee -a /etc/sysctl.conf\nsudo sysctl -p\n\n# Set RLIMIT_MEMLOCK to unlimited\necho \"* soft memlock unlimited\" | sudo tee -a /etc/security/limits.conf\necho \"* hard memlock unlimited\" | [...]
            "name": "cassandra-node-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.88.32.103",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/networks/cassandra-network",
                "network_ip": "10.0.0.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/subnetworks/cassandra-subnetwork",
                "subnetwork_project": "mybigdataproject-485818"
              }
            ],
            "project": "mybigdataproject-485818",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/zones/europe-north1-b/instances/cassandra-node-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cassandra-node"
            ],
            "tags_fingerprint": "jxI-TrHgZeI=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-north1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.cassandra_internal",
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/zones/europe-north1-c/disks/cassandra-node-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-02-04T11:03:07.003-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/mybigdataproject-485818/zones/europe-north1-c/instances/cassandra-node-3",
            "instance_id": "3507511966206667015",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "5a13h5GhGX4=",
            "metadata_startup_script": "#!/bin/bash\nset -euxo pipefail\n\n# Update system and install dependencies\napt-get update\napt-get install -y docker.io curl\nsystemctl enable docker\nsystemctl start docker\n\n# Increase the vm.max_map_count and RLIMIT_MEMLOCK\necho \"vm.max_map_count=1048575\" | sudo tee -a /etc/sysctl.conf\nsudo sysctl -p\n\n# Set RLIMIT_MEMLOCK to unlimited\necho \"* soft memlock unlimited\" | sudo tee -a /etc/security/limits.conf\necho \"* hard memlock unlimited\" | [...]
            "name": "cassandra-node-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.88.174.120",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/networks/cassandra-network",
                "network_ip": "10.0.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/subnetworks/cassandra-subnetwork",
                "subnetwork_project": "mybigdataproject-485818"
              }
            ],
            "project": "mybigdataproject-485818",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/zones/europe-north1-c/instances/cassandra-node-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cassandra-node"
            ],
            "tags_fingerprint": "jxI-TrHgZeI=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-north1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.cassandra_internal",
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nifi",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/zones/europe-north1-a/disks/nifi-node"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2026-02-04T10:19:13.011-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/mybigdataproject-485818/zones/europe-north1-a/instances/nifi-node",
            "instance_id": "4380714272438498161",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "18ksBvixjp8=",
            "metadata_startup_script": "#!/bin/bash\nset -euxo pipefail\n\nNIFI_IMAGE=\"apache/nifi:2.7.2\"\nNIFI_NAME=\"nifi\"\n\nNIFI_USER=\"sabeeh\"\nNIFI_PASS=\"sabeehsabeeh\"\n\napt-get update\napt-get install -y docker.io curl\nsystemctl enable docker\nsystemctl start docker\n\n# Use Terraform-known static public IP (avoid metadata curl escaping issues)\nPUBLIC_IP=\"34.88.120.214\"\n\nmkdir -p /opt/nifi/{db,flowfile_repo,content_repo,provenance_repo,state,logs,jdbc}\nchmod -R 777 /opt/nifi [...]
            "name": "nifi-node",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.88.120.214",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/networks/cassandra-network",
                "network_ip": "10.0.0.50",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/subnetworks/cassandra-subnetwork",
                "subnetwork_project": "mybigdataproject-485818"
              }
            ],
            "project": "mybigdataproject-485818",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/zones/europe-north1-a/instances/nifi-node",
            "service_account": [
              {
                "email": "nifi-landing-sa@mybigdataproject-485818.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "nifi-node"
            ],
            "tags_fingerprint": "gyem1R_xn5o=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-north1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.nifi_internal",
            "google_compute_address.nifi_public",
            "google_compute_network.default",
            "google_compute_subnetwork.default",
            "google_project_service.cloudresourcemanager_api",
            "google_project_service.iam_api",
            "google_service_account.nifi_sa",
            "google_storage_bucket.landing_bucket",
            "google_storage_bucket_iam_member.nifi_landing_prefix_access"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mybigdataproject-485818/global/networks/cassandra-network",
            "mtu": 0,
            "name": "cassandra-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7538843367746283217",
            "numeric_id": "7538843367746283217",
            "project": "mybigdataproject-485818",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/networks/cassandra-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-31T06:57:16.804-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/mybigdataproject-485818/regions/europe-north1/subnetworks/cassandra-subnetwork",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "cassandra-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/global/networks/cassandra-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mybigdataproject-485818",
            "purpose": "PRIVATE",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mybigdataproject-485818/regions/europe-north1/subnetworks/cassandra-subnetwork",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1653871138588305059
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    }
  ]
}